@@ -5,11 +5,11 @@
 ## X-Author-Server: Llane US
 ## X-Author-Faction: Alliance
 ## X-Email: psvander AT gmail DOT com
-## Version: Alpha 0.36
+## Version: Alpha 0.37
 ## X-Category: Raid, Party, Healer, Priest, Shaman, Paladin, Druid
 ## SavedVariables: SmartRes2DB
-## X-Localizations: enUS, frFR, deDE
-## X-Credits: frFR Xilbar/ckeurk, deDE Farook/Black_Mystics
+## X-Localizations: enUS, frFR, deDE, esES, esMX
+## X-Credits: Xilbar/ckeurk, Farook, Black_Mystics, Silmano
 ## X-Website: http://www.wowace.com/addons/smartres2/
 ## X-Curse-Packaged-Version: r31
 ## X-Curse-Project-Name: SmartRes2
